# Try-On-Wardrobe-ML

./: .env.example  .gitignore  README.md  app.py  convert_weights.ipynb  docker-compose-dev.yml  docker-compose-model.yml  docker-compose.yml  fastapi_app.py  pyproject.toml  requirements.txt  test.sh  test_request.py
app/: __init__.py
app/internal/repository/: repository.py
app/internal/repository/postgresql/: clothes_vector.py  outfit.py
app/internal/repository/rabbitmq/: base_repository.py  cut_response.py  cut_task.py  model.py  model_response.py  model_task.py  outfit_gen_response.py  outfit_gen_task.py  recsys_response.py  recsys_task.py  try_on_response.py  try_on_task.py
app/internal/routes/: __init__.py  amazon_s3.py  cut.py  model.py  outfit_gen.py  postgres.py  recsys.py  try_on.py
app/internal/services/: __init__.py  amazon_s3.py  cut.py  file.py  model.py  outfit_gen.py  postgres.py  recsys.py  try_on.py
app/model/: __init__.py  router.py
app/pkg/logger/: __init__.py  logger.py
app/pkg/middlewares/: __init__.py  x_auth_token.py
app/pkg/ml/: __init__.py  buffer_converters.py  test.py  try_on_example.ipynb
app/pkg/ml/auto_clothing_set/: autoset.py
app/pkg/ml/autotags/: autotag.py
app/pkg/ml/file_manager/: base_manager.py  local_manager.py
app/pkg/ml/outfits_recsys/: cluster_optimizer.py  cluster_processor.py  recsys.py
app/pkg/ml/try_on/: __init__.py  idm_vton.py  lady_vton.py  models_aggregator.py
app/pkg/ml/usage_examples/: autoset.ipynb  autotags.ipynb  interactive_try_on.py  recsys.ipynb  test.py  test_dense_pose.py  test_rm_back.ipynb  test_rm_back.py  try_on.ipynb  try_on.py  try_on_batch.ipynb  try_on_set.py
app/pkg/ml/utils/: device.py
app/pkg/models/: __init__.py
app/pkg/models/app/: amazon_s3.py  clothes.py  cut.py  image_category.py  image_type.py  model.py  outfit.py  outfit_gen.py  rabbitmq.py  recsys.py  season.py  try_on.py  (+1 more)
app/pkg/resources/: __init__.py
app/pkg/settings/: __init__.py  settings.py
docker/api/: Dockerfile
docker/ml/: Dockerfile
docker/model/: Dockerfile  Dockerfile_dev  Dockerfile_no_poetry
ml/: tmp.py
ml/preprocessing/: resize.py
ml/processing/: tags.py
serve/serve_utils/: model_convert.sh  serve.sh
server/: Dockerfile  fastapi_app.py  test_request.py
(+60 files in other folders)
