[tool.poetry]
name = "api"
version = "0.1.0"
description = "api"
authors = ["timofeytst <yarik.mist@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
requests = "^2.31.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pylint = "^3.1.0"
pylint-pytest = "^1.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
