[tool.poetry]
name = "api"
version = "0.1.0"
description = "api"
authors = ["timofeytst <yarik.mist@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
requests = "^2.31.0"
python-multipart = "^0.0.9"
pydantic = {version = "^1.10.13", extras = ["dotenv"]}
aio-pika = "^9.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pylint = "^3.1.0"
pylint-pytest = "^1.1.7"

[tool.poetry.group.ml.dependencies]
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-linux_x86_64.whl"}
opencv-python = "4.7.0.72"
diffusers = "0.14.0"
transformers = "4.27.3"
scipy = "1.11.4"
matplotlib = "3.7.1"
scikit-image = "^0.22.0"
ninja = "^1.11.1.1"
pillow = "^10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
